# Fastapi-auth

./: .gitignore  arrayproduct.py  aws3.py  demo.py  dictcode.py  encapuslation.py  fitness.csv  intest.py  kl.txt  lrucache.py  numone.py  object.py  op.txt  pyproject.toml  regular.py  requirements.txt  slidingwindow.py  supersub.py
fastapp/: Jenkinsfile  auth.py  bg_scheduler.py  celery_worker.py  db.py  dependencies.py  main.py  requirements.txt  requirements2.txt  tasks.py
fastapp/books/: routes.py  schemas.py  service.py
fastapp/confsettings/: aws.py  config.py
fastapp/core/: httpx_client.py
fastapp/exceptions/: request_errors.py
fastapp/external_services/: weather.py
fastapp/routers/: user_auth.py  user_service.py
fastapp/tests/: test_controller.py
fastapp/websocket/: main.py  notification_service.py  redis_client.py  redis_subscriber.py
